<resources>
    <string name="app_name">Game</string>
    <string name="btnMenu">MENU</string>
    <string name="btnQuit">QUIT</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>

</resources>
