<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/retina_wood"
    tools:context="com.a5androidintern2.game.MainActivity">

    <LinearLayout
        android:id="@+id/llFirstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTitleScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SCORE:" />

            <TextView
                android:id="@+id/tvValueScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your score" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTitleTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TIME:" />

            <TextView
                android:id="@+id/tvValueTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnMenu" />

            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnQuit" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgTask"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        />
        <!--android:src="@drawable/ic_android_black_24dp"-->


    <LinearLayout
        android:id="@+id/llFirstButtonsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn0"/>
            <!--android:drawableLeft="@drawable/ic_android_black_24dp"-->


        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn1"/>
            <!--android:drawableLeft="@drawable/ic_attach_file_black_24dp"-->

        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn2"/>
            <!--android:drawableLeft="@drawable/ic_audiotrack_black_24dp"-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSecondButtonsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn3"/>
            <!--android:drawableLeft="@drawable/ic_cloud_queue_black_24dp"-->

        <ImageButton
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn4"/>
            <!--android:drawableLeft="@drawable/ic_directions_run_black_24dp"-->

        <ImageButton
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn5"/>
            <!--android:drawableLeft="@drawable/ic_fitness_center_black_24dp"-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llThirdButtonsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn6"/>
            <!--android:drawableLeft="@drawable/ic_play_arrow_black_24dp"-->

        <ImageButton
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn7"/>
            <!--android:drawableLeft="@drawable/ic_send_black_24dp"-->

        <ImageButton
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded"
            android:text="@string/btn8"/>
            <!--android:drawableLeft="@drawable/ic_star_black_24dp"-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitleTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BUTTON TEST"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvValueTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="you pressed no button"
            android:textAlignment="center"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnAndroid"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_android_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnFitness"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_fitness_center_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnStar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_star_black_24dp"
                android:onClick="onBtnClick"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnSend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_send_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnAttach"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_attach_file_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnAudio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_audiotrack_black_24dp"
                android:onClick="onBtnClick"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnCloud"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_cloud_queue_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnRun"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_directions_run_black_24dp"
                android:onClick="onBtnClick"/>

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:onClick="onBtnClick"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tvTestTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You pressed the button:"/>

        <TextView
            android:id="@+id/tvTestValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no button"/>
    </LinearLayout>

</LinearLayout>
